--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,10 +29,12 @@ services:
       - DB_PASSWORD=labpass
       - FLASK_ENV=production
     ports:
-      - "8085:5000"
+      - "8089:5000"
     depends_on:
       db:
         condition: service_healthy
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock:ro
 
 volumes:
   pgdata:
